<resources>
    <string name="app_name">chatz</string>
    <string name="gets_started">Gets Started</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="chatz">ChatZ</string>
    <string name="already_a_member">Already a member?</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="by_creating_a_free_account">by creating a free account.</string>
    <string name="sign_in_to_access_your_account">sign in to access your account</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="enter_email">Enter Email</string>
    <string name="password1">Password</string>
    <string name="login1">Login</string>
    <string name="register_now">Register Now</string>
    <string name="add_user_button">Add User Button</string>
    <string name="no_users_found">No users found</string>
    <string name="back_button">Back button</string>
    <string name="your_profile">Your Profile</string>
    <string name="username">Username:</string>
    <string name="logout">Logout</string>
    <string name="image_upload">Image Upload</string>
    <string name="start_your_conversation">Start your conversation...</string>
    <string name="attach_image">attach image</string>
    <string name="take_down">take down</string>
    <string name="new_user">New User?</string>
    <string name="login_instead">Login instead</string>
    <string name="change_username">Change Username</string>
    <string name="enter_the_username">Enter the New Username</string>
    <string name="status">Status:</string>
    <string name="change_status">Change Status</string>
    <string name="enter_the_new_status">Enter The New Status</string>
    <string name="edit_profile_image">Edit Profile Image</string>
</resources>