<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    tools:context=".start.home.profile.ProfileActivity">

    <TextView
        android:id="@+id/textView4"
        style="@style/TextAppearance.Material3.DisplayMedium"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginHorizontal="12dp"
        android:fontFamily="@font/satoshi"
        android:text="@string/chatz"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/userInfoContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileimg"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img"
                android:paddingTop="10dp"
                app:shapeAppearance="@style/CircleImageView" />


            <ImageButton
                android:id="@+id/imgedit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="10dp"
                android:background="@drawable/circle_background"
                android:contentDescription="@string/edit_profile_image"
                android:src="@drawable/edit" />
        </FrameLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/satoshi"
            android:text="@string/your_profile"
            style="@style/TextAppearance.Material3.DisplaySmall"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/mulish"
            android:text="@string/username"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/userstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/mulish"
            android:text="@string/status"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/mulish"
            android:text="Email: "
            style="@style/TextAppearance.Material3.TitleSmall"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/changeUname"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/mulish"
            android:paddingHorizontal="24dp"
            android:text="@string/change_username"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/changeStatus"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/mulish"
            android:paddingHorizontal="24dp"
            android:text="@string/change_status"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logoutBtn"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/mulish"
            android:paddingHorizontal="24dp"
            android:text="@string/logout"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

    </LinearLayout>

</RelativeLayout>
</ScrollView>